[Dice] Update settings when account image is updated

When the account image is updated in the background,
settings is now notified to make changes accordingly.

Bug: 882384
Change-Id: I05000533de1205fc5b9d9a9500b4c05f088e8923
Reviewed-on: https://chromium-review.googlesource.com/1238501
Reviewed-by: Scott Chen <scottchen@chromium.org>
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#593443}(cherry picked from commit 59c84c3ca2b8278779844ea6dd5402529381083b [formerly edb96f4c8078a16000a8687a9afeada9c39e9cde])
Reviewed-on: https://chromium-review.googlesource.com/1244756
Reviewed-by: Thomas Tangl <tangltom@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#671}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: b5a6bb4e1cd2d9289e658645fa2d118fa0fbd494